--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^5.24.6",
+    "framer-motion": "^12.6.3",
+    "next": "14.2.26",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.26"
+    "react-hook-form": "^7.55.0",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.26"
+    "eslint-config-next": "14.2.26",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
