--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "framer-motion": "^12.6.3",
+    "moment-jalaali": "^0.10.4",
     "next": "14.2.26",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
