--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "framer-motion": "^12.6.3",
+    "jwt-decode": "^4.0.0",
     "moment-jalaali": "^0.10.4",
     "next": "14.2.26",
     "next-redux-wrapper": "^8.1.0",
