--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "sweetalert2": "^11.17.2"
