--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@geist-ui/react": "^2.2.5",
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "moment-jalaali": "^0.10.4",
     "next": "14.2.26",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
     "sweetalert2": "^11.17.2"
   },
